2009-11-12  Thiago Macieira <thiago.macieira@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix linking on Linux 32-bit.

        It was missing the ".text" directive at the top of the file,
        indicating that code would follow. Without it, the assembler created
        "NOTYPE" symbols, which would result in linker errors.
        https://bugs.webkit.org/show_bug.cgi?id=30863

        * jit/JITStubs.cpp:

Canonical link: https://commits.webkit.org/42303@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50874 268f45cc-cd09-0410-ab3c-d52691b4dbfc